# sosecrets

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: testing.yml
docs/: get-started.md  index.md  installation.md
docs/APIs/: secret.md  secretmappings.md
docs/examples/: python-dotenv.md  simple-example.md
examples/: env_management.py  secret_key_mgmt.py
src/: __init__.py
src/sosecrets/: __init__.py  __init__.pyi  build.py  exceptions.py  secretdicts.py  secrets.py  secrets.pyi  secrets.pyx  sosecrets.pyi  typed.py
tests/: test_secretdicts.py  test_secrets.py  test_sosecrets.py
